[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/theme/main.tres" type="Theme" id=1]
[ext_resource path="res://src/scripts/ItemSettings.gd" type="Script" id=2]

[node name="ItemSettings" type="Panel"]
margin_right = 1280.0
margin_bottom = 150.0
rect_min_size = Vector2( 1280, 150 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="LineEdit" parent="."]
margin_right = 1125.0
margin_bottom = 40.0
text = "ExItem"
placeholder_text = "Item name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteB" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -77.0
margin_top = -35.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 39.0
margin_right = -79.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 26.0
margin_bottom = 35.0

[node name="AddPathB" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_right = 26.0
margin_bottom = 35.0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -155.0
margin_bottom = 40.0
text = "Locked"

[connection signal="text_entered" from="Label" to="." method="_on_Label_text_entered"]
[connection signal="pressed" from="DeleteB" to="." method="_on_DeleteB_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/AddPathB" to="." method="_on_AddPathB_pressed"]
